# Physics_World_Model

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  test_all_modalities.py
community/: CONTRIBUTING_CHALLENGE.md  OPEN_CORE_BOUNDARY.md  __init__.py  leaderboard.py  validate.py
docs/: MST_L_INTEGRATION_SUMMARY.md  PLAN_v4.md  PLAN_v4_report_contract.md  STATUS_v3_1.md  benchmark_results_26_modalities.md  cacti_working_process.md  cassi_plan.md  cassi_working_process.md  conclusion.md  confocal_3d_working_process.md  confocal_livecell_working_process.md  ct_working_process.md  dot_working_process.md  flim_working_process.md  fpm_working_process.md  gaussian_splatting_working_process.md  holography_working_process.md  implementation_plan.md  implementation_results.md  integral_working_process.md  lensless_working_process.md  light_field_working_process.md  lightsheet_working_process.md  matrix_working_process.md  modality_standards.md  mri_working_process.md  nerf_working_process.md  oct_working_process.md  operator_mode.md  panorama_multifocal_working_process.md  parallel_tasks.md  phase_retrieval_working_process.md  photoacoustic_working_process.md  plan.md  plan1.md  plan1_check.md  plan1_paper_polished_v2.md  plan_operatorgraph_foundation.md  plan_v1.md  plan_v2.md  (+14 more)
examples/: generate_example_data.py  operator_correction_examples.py  prompt_to_casepack.py  yA_calibrate_recon_cassi.py  yA_calibrate_recon_generic.py
reference/: useful.py
scripts/: cassi_noise_sensitivity_analysis.py  demo_cassi_alg12.py  generate_all_phase_b.py  (+78 more)
(+894 files in other folders)
